...
          borderRadius: BorderRadius.circular(30),
          child: NavigationBar(
            selectedIndex: currentIndex,
            onDestinationSelected: onDestinationSelected,
            destinations: const [
              NavigationDestination(
                  icon: Icon(Icons.home_rounded), label: 'Dashboard'),
              NavigationDestination(
                  icon: Icon(Icons.bar_chart_rounded), label: 'Riwayat'),
              NavigationDestination(
                  icon: Icon(Icons.grid_view_rounded), label: 'Kategori'),
              NavigationDestination(
                  icon: Icon(Icons.settings_rounded), label: 'Settings'),
            ],
          ),
        ),
      ),
    );
  }
...
